<resources>
    <string name="app_name">Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Coming Soon</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="image_start_url">https://image.tmdb.org/t/p/w300</string>
    <string name="image_start_url780">https://image.tmdb.org/t/p/w780</string>
    <string name="youtube_link_start">https://www.youtube.com/watch?v=</string>
    <string name="films">Films</string>
    <string name="home">Home</string>
    <string name="people">Actors &amp; Crew</string>
    <string name="home_title">Movies App</string>
    <string name="discover">Discover</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_movie_detailed">MovieDetailedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_details">Details</string>
    <string name="title_bio">Bio</string>
    <string name="title_videos">Videos</string>
    <string name="title_cast">Cast</string>
    <string name="title_crew">Crew</string>
    <string name="title_recommendations">Recommended</string>
    <string name="title_similar">Similar</string>

    <string name="sort_by">Sort By:</string>
    <string name="sort_by_vote_average">Vote Average</string>
    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_first_air_date_desc">Release Date (Descending)</string>
    <string name="sort_by_first_air_date_asc">Release Date (Ascending)</string>
    <string name="sort_by_revenue">Revenue</string>

    <!-- strings to make tmdb requests -->
    <string name="sort_by_vote_average_request">vote_average.desc</string>
    <string name="sort_by_popularity_request">popularity.desc</string>
    <string name="sort_by_release_date_desc_request">release_date.desc</string>
    <string name="sort_by_release_date_asc_request">release_date.asc</string>
    <string name="sort_by_revenue_desc_request">revenue.desc</string>

    <string name="vote_average_min">Vote Average min:</string>
    <string name="vote_count_min">Vote Count min:</string>
    <string name="include_genres">Include</string>
    <string name="exclude_genres">Exclude</string>
    <string name="release_year">Release Year:</string>
    <string name="runtime_min">Min Runtime:</string>
    <string name="runtime_max">Max Runtime:</string>

    <string name="cancel">Cancel</string>
    <!-- genres -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_sci_fi">Sci-Fi</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>

    <string name="genres">Genre(s):\u0020</string>
    <string name="languages">Language(s):\u0020</string>
    <string name="budget">Budget:\u0020</string>
    <string name="revenue">Revenue:\u0020</string>
    <string name="runtime">Runtime:\u0020</string>
    <string name="mins"> mins</string>
    <string name="vote">vote</string>
    <string name="votes">votes</string>

    <string name="born">Born:\u0020</string>
    <string name="_in">in</string>
    <string name="known_for">Known for:\u0020</string>
</resources>
