<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1">

        <GridLayout
            android:id="@+id/genres_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:columnCount="4"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_action"
                />
            <CheckBox
                android:id="@+id/check_box_action"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_adventure"
                />
            <CheckBox
                android:id="@+id/check_box_adventure"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_animation"
                />
            <CheckBox
                android:id="@+id/check_box_animation"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_comedy"
                />
            <CheckBox
                android:id="@+id/check_box_comedy"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_crime"
                />
            <CheckBox
                android:id="@+id/check_box_crime"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_documentary"
                />
            <CheckBox
                android:id="@+id/check_box_documentary"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_drama"
                />
            <CheckBox
                android:id="@+id/check_box_drama"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_family"
                />
            <CheckBox
                android:id="@+id/check_box_family"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_fantasy"
                />
            <CheckBox
                android:id="@+id/check_box_fantasy"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_history"
                />
            <CheckBox
                android:id="@+id/check_box_history"/>

            <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorTextLight"
            android:text="@string/genre_horror"
            />
            <CheckBox
                android:id="@+id/check_box_horror"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_music"
                />
            <CheckBox
                android:id="@+id/check_box_music"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_mystery"
                />
            <CheckBox
                android:id="@+id/check_box_mystery"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_romance"
                />
            <CheckBox
                android:id="@+id/check_box_romance"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_sci_fi"
                />
            <CheckBox
                android:id="@+id/check_box_sci_fi"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_tv_movie"
                />
            <CheckBox
                android:id="@+id/check_box_tv_movie"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_thriller"
                />
            <CheckBox
                android:id="@+id/check_box_thriller"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_war"
                />
            <CheckBox
                android:id="@+id/check_box_war"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextLight"
                android:text="@string/genre_western"
                />
            <CheckBox
                android:id="@+id/check_box_western"/>



        </GridLayout>



    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_select_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:textSize="@dimen/text_size_small"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:text="@string/include_genres"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:textSize="@dimen/text_size_small"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>