<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="start"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:background="@color/colorPrimary"
    android:drawSelectorOnTop="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/films"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:textColor="@color/colorTextLight"/>


            <TextView
                android:id="@+id/navigation_film_home"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:textColor="@color/colorTextLight"/>



            <TextView
                android:id="@+id/navigation_discover"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/discover"
                android:textColor="@color/colorTextLight"/>

            <TextView
                android:id="@+id/navigation_now_playing"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/now_playing"
                android:textColor="@color/colorTextLight"/>



            <TextView
                android:id="@+id/navigation_upcoming"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/upcoming"
                android:textColor="@color/colorTextLight"/>


            <TextView
                android:id="@+id/navigation_top_rated"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/top_rated"
                android:textColor="@color/colorTextLight"/>


            <TextView
                android:id="@+id/navigation_popular"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/popular"
                android:textColor="@color/colorTextLight"/>

            <TextView
                android:id="@+id/navigation_people_list"
                android:padding="@dimen/padding_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/people"
                android:textColor="@color/colorTextLight"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>